After the end of the end

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Joshua",
+    "name": "wcs/joshua",
     "description": "Capture the flag web application",
     "authors": [
         {
